layout/html/table/src/nsTableOuterFrame.cpp
@@ -1498,6 +1498,11 @@ NS_METHOD nsTableOuterFrame::Reflow(nsIPresContext*          aPresContext,
     // don't do much if we are resize reflowed exactly like last time
     aDesiredSize.width  = mRect.width;
     aDesiredSize.height = mRect.height;
+
+    // We know our view (if we have one) has been positioned
+    // correctly, but it's up to us to make sure that our child views
+    // are correctly positioned, too.
+    nsContainerFrame::PositionChildViews(aPresContext, this);
   }
   else if (eReflowReason_Incremental == aOuterRS.reason) {
     rv = IncrementalReflow(aPresContext, aDesiredSize, aOuterRS, aStatus);
